add new columns to table music:     - size     - duration
fix bugs in handlers
