# internal/api/http/view/music.go
@@ -1,10 +1,8 @@
 package view
 
 type MusicView struct {
-	ID   string `json:"id"`
-	Name string `json:"name"`
-}
-
-type ListMusicView struct {
-	Musics []*MusicView `json:"musics"`
+	ID       string `json:"id"`       // id трека
+	Name     string `json:"name"`     // название трека
+	Size     string `json:"size"`     // размер файла трека (в удобном для чтения виде)
+	Duration string `json:"duration"` // продолжительность трека
 }
